[gd_scene load_steps=6 format=3 uid="uid://du6ghyemyjnih"]

[ext_resource type="Script" uid="uid://db7i0jxpxym8a" path="res://scripts/invent.gd" id="1_d2lx8"]
[ext_resource type="Texture2D" uid="uid://c42sv1l4qjoma" path="res://tilemaps/dialogue.png" id="1_vsvb1"]
[ext_resource type="Texture2D" uid="uid://blukfm4l7u7q7" path="res://tilemaps/itens/poção de mana.png" id="3_lwgnl"]
[ext_resource type="Texture2D" uid="uid://b8pgm1q5pqqom" path="res://tilemaps/itens/poção de vida.png" id="4_2h3kg"]
[ext_resource type="Texture2D" uid="uid://cffcy58fhiyp7" path="res://mage/mage idle.png" id="5_qj5pd"]

[node name="inventário" type="CanvasLayer"]
script = ExtResource("1_d2lx8")

[node name="Dialogue" type="Sprite2D" parent="."]
position = Vector2(641, 367)
scale = Vector2(40, 40)
texture = ExtResource("1_vsvb1")

[node name="Label" type="Label" parent="."]
offset_left = 593.0
offset_top = 94.0
offset_right = 690.0
offset_bottom = 117.0
text = "INVENTÁRIO"

[node name="LifePotionLabel" type="Label" parent="."]
offset_left = 110.0
offset_top = 297.0
offset_right = 150.0
offset_bottom = 320.0

[node name="ManaPotionLabel" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.032
offset_left = 256.0
offset_top = 297.0
offset_right = 256.32
offset_bottom = 296.96

[node name="PoçãoDeMana" type="Sprite2D" parent="."]
position = Vector2(328, 254)
scale = Vector2(10, 10)
texture = ExtResource("3_lwgnl")

[node name="PoçãoDeVida" type="Sprite2D" parent="."]
position = Vector2(174, 254)
scale = Vector2(10, 10)
texture = ExtResource("4_2h3kg")

[node name="Idle" type="Sprite2D" parent="."]
position = Vector2(1039, 333)
scale = Vector2(10, 10)
texture = ExtResource("5_qj5pd")
hframes = 2
